grammars/tree-sitter/grammar.js
		program: ($) => seq(optional($.hash_bang_line), repeat($.statement)),

		export_statement: ($) =>
			choice(
				seq(
					'export',
					choice(
						seq('*', $.from_clause),
						seq($.namespace_export, $.from_clause),
						seq($.export_clause, optional($.from_clause)),
						seq('default', choice($.declaration, seq($.expression, $._semicolon))),
						$.declaration,
					),
					$._semicolon,
				),
				seq(
					'export',
					'type',
					choice(seq('*', $.from_clause), seq($.export_clause, optional($.from_clause))),
					$._semicolon,
				),
			),

		variable_declaration: ($) =>
			seq(choice('var', 'let', 'const'), commaSep1($.variable_declarator), $._semicolon),

		variable_declarator: ($) =>
			seq(
				field('name', choice($.identifier, $._destructuring_pattern)),
				optional($._type_annotation),
				optional($.initializer),
			),

		interface_declaration: ($) =>
			seq(
				'interface',
				field('name', $.type_identifier),
				optional(field('type_parameters', $.type_parameters)),
				optional($.extends_type_clause),
				field('body', $.interface_body),
			),

		interface_body: ($) =>
			seq(
				'{',
				repeat(
					seq(
						choice($.property_signature, $.method_signature, $.index_signature),
						optional(choice($._semicolon, ',')),
					),
				),
				'}',
			),

		method_signature: ($) =>
			seq(
				optional('readonly'),
				optional(choice('get', 'set')),
				field('name', $.property_name),
				optional('?'),
				optional(field('type_parameters', $.type_parameters)),
				field('parameters', $.formal_parameters),
				optional($._type_annotation),
			),

		index_signature: ($) =>
			seq(
				optional('readonly'),
				'[',
				field('name', $.identifier),
				$._type_annotation,
				']',
				$._type_annotation,
			),

		type_alias_declaration: ($) =>
			seq(
				'type',
				field('name', $.type_identifier),
				optional(field('type_parameters', $.type_parameters)),
				'=',
				field('value', $.type),
				$._semicolon,
			),

		formal_parameters: ($) => seq('(', optional(commaSep($._formal_parameter)), optional(','), ')'),

		_formal_parameter: ($) => choice($.required_parameter, $.rest_parameter),

		required_parameter: ($) =>
			seq(
				field('pattern', choice($.identifier, $._destructuring_pattern)),
				optional('?'),
				optional($._type_annotation),
				optional($.initializer),
			),

		_destructuring_pattern: ($) =>
			choice($.object_pattern, $.array_pattern, $.lazy_object_pattern, $.lazy_array_pattern),

		as_expression: ($) => prec.left(PREC.REL, seq($.expression, 'as', choice('const', $.type))),

		parenthesized_expression: ($) => seq('(', $.expression, ')'),

		ternary_expression: ($) =>
			prec.right(
				PREC.TERNARY,
				seq(
					field('condition', $.expression),
					$._ternary_qmark,
					field('consequence', $.expression),
					':',
					field('alternative', $.expression),
				),
			),

		binary_expression: ($) =>
			choice(
				...[
					['&&', PREC.AND],
					['||', PREC.OR],
					['??', PREC.OR],
					['>>', PREC.TIMES],
					['>>>', PREC.TIMES],
					['<<', PREC.TIMES],
					['&', PREC.AND],
					['^', PREC.OR],
					['|', PREC.OR],
					['+', PREC.PLUS],
					['-', PREC.PLUS],
					['*', PREC.TIMES],
					['/', PREC.TIMES],
					['%', PREC.TIMES],
					['**', PREC.EXP],
					['<', PREC.REL],
					['<=', PREC.REL],
					['==', PREC.REL],
					['===', PREC.REL],
					['!=', PREC.REL],
					['!==', PREC.REL],
					['>=', PREC.REL],
					['>', PREC.REL],
					['instanceof', PREC.REL],
					['in', PREC.REL],
				].map(([operator, precedence]) =>
					prec.left(
						precedence,
						seq(
							field('left', $.expression),
							field('operator', operator),
							field('right', $.expression),
						),
					),
				),
			),

		new_expression: ($) =>
			prec.right(
				PREC.NEW,
				seq(
					'new',
					field('constructor', $.primary_expression),
					optional(field('type_arguments', $.type_arguments)),
					optional(field('arguments', $.arguments)),
				),
			),

		member_expression: ($) =>
			prec(
				PREC.MEMBER,
				seq(
					field('object', choice($.expression, $.primary_expression)),
					choice('.', '?.'),
					field('property', choice($.identifier, $.private_property_identifier)),
				),
			),

		arguments: ($) =>
			seq('(', commaSep(choice($.expression, $.spread_element)), optional(','), ')'),

		property_name: ($) =>
			choice(
				$.identifier,
				$.private_property_identifier,
				$.string,
				$.number,
				$.computed_property_name,
			),

		identifier: ($) => {
			const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			const alphanumeric =
				/[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			return token(seq(alpha, repeat(alphanumeric)));
		},

		string: ($) =>
			choice(
				seq('"', repeat(choice(token.immediate(prec(1, /[^"\\\n]+/)), $.escape_sequence)), '"'),
				seq("'", repeat(choice(token.immediate(prec(1, /[^'\\\n]+/)), $.escape_sequence)), "'"),
			),

		type_parameters: ($) => seq('<', commaSep1($.type_parameter), optional(','), '>'),

		type_parameter: ($) =>
			seq($.identifier, optional(seq('extends', $.type)), optional(seq('=', $.type))),

		_type_annotation: ($) => seq(':', $.type),

		type: ($) =>
			choice(
				$.identifier,
				$.predefined_type,
				$.type_identifier,
				$.nested_type_identifier,
				$.generic_type,
				$.object_type,
				$.array_type,
				$.tuple_type,
				$.union_type,
				$.intersection_type,
				$.function_type,
				$.literal_type,
				$.parenthesized_type,
			),

		predefined_type: ($) =>
			choice('any', 'number', 'boolean', 'string', 'symbol', 'void', 'unknown', 'never', 'object'),

		type_identifier: ($) => alias($.identifier, $.type_identifier),

		generic_type: ($) => seq(choice($.identifier, $.nested_type_identifier), $.type_arguments),

		type_arguments: ($) => seq('<', commaSep1($.type), optional(','), '>'),

		// Members separate with `,`, `;`, or just a newline (via ASI), like interface_body.
		object_type: ($) =>
			seq('{', repeat(seq($._object_type_member, optional(choice($._semicolon, ',')))), '}'),

		_object_type_member: ($) => choice($.property_signature, $.method_signature, $.index_signature),

		property_signature: ($) =>
			seq(optional('readonly'), field('name', $.property_name), optional('?'), $._type_annotation),

		union_type: ($) => prec.left(seq($.type, '|', $.type)),

		function_type: ($) => seq(optional($.type_parameters), $.formal_parameters, '=>', $.type),

		initializer: ($) => seq('=', choice($.expression, $.style_element, $.script_element)),

		_semicolon: ($) => choice($._automatic_semicolon, ';'),
	},
});

function commaSep(rule) {
	return optional(commaSep1(rule));
}

function commaSep1(rule) {
	return seq(rule, repeat(seq(',', rule)));
}
