grammars/tree-sitter/test/corpus/typescript.txt
==================
Interface Declarations
==================

export interface TransitionOptions {
	duration: number;
	easing?: (t: number) => number,
	name: string
	baz(): void;
	[key: string]: any
}

---

(program
  (export_statement
    (interface_declaration
      (type_identifier
        (type_identifier))
      (interface_body
        (property_signature
          (property_name
            (identifier))
          (type
            (predefined_type)))
        (property_signature
          (property_name
            (identifier))
          (type
            (function_type
              (formal_parameters
                (required_parameter
                  (identifier)
                  (type
                    (predefined_type))))
              (type
                (predefined_type)))))
        (property_signature
          (property_name
            (identifier))
          (type
            (predefined_type)))
        (method_signature
          (property_name
            (identifier))
          (formal_parameters)
          (type
            (predefined_type)))
        (index_signature
          (identifier)
          (type
            (predefined_type))
          (type
            (predefined_type)))))))

==================
Type Alias Declarations
==================

type Handler<T> = (e: T) => void;
export type Rects = Map<string | number, DOMRect>;

---

(program
  (type_alias_declaration
    (type_identifier
      (type_identifier))
    (type_parameters
      (type_parameter
        (identifier)))
    (type
      (function_type
        (formal_parameters
          (required_parameter
            (identifier)
            (type
              (identifier))))
        (type
          (predefined_type)))))
  (export_statement
    (type_alias_declaration
      (type_identifier
        (type_identifier))
      (type
        (generic_type
          (identifier)
          (type_arguments
            (type
              (union_type
                (type
                  (predefined_type))
                (type
                  (predefined_type))))
            (type
              (identifier))))))))

==================
As Expressions
==================

const exit = (el as any).__tsrx_exit;
const frozen = value as const;

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (member_expression
          (parenthesized_expression
            (as_expression
              (identifier)
              (type
                (predefined_type))))
          (identifier)))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (as_expression
          (identifier))))))

==================
Ternary Expressions
==================

const label = active ? 'on' : 'off';

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (ternary_expression
          (identifier)
          (string)
          (string))))))

==================
Ternary Does Not Break Related Operators
==================

const a = x ?? y;
const b = obj?.prop;
const c = m < n;

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (binary_expression
          (identifier)
          (identifier)))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (member_expression
          (identifier)
          (identifier)))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (binary_expression
          (identifier)
          (identifier))))))

==================
New Expression With Type Arguments
==================

const rects = new Map<string | number, DOMRect>();

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (initializer
        (new_expression
          (identifier)
          (type_arguments
            (type
              (union_type
                (type
                  (predefined_type))
                (type
                  (predefined_type))))
            (type
              (identifier)))
          (arguments))))))

==================
Object Type With Semicolon Separators
==================

let p: { x: number; y: string };

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (type
        (object_type
          (property_signature
            (property_name
              (identifier))
            (type
              (predefined_type)))
          (property_signature
            (property_name
              (identifier))
            (type
              (predefined_type))))))))

==================
Object Type With Newline-Separated Members
==================

let q: {
	x: number
	y: string
};

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (type
        (object_type
          (property_signature
            (property_name
              (identifier))
            (type
              (predefined_type)))
          (property_signature
            (property_name
              (identifier))
            (type
              (predefined_type))))))))
